src/App.css
/* ... */
.portfolio__content{
  padding: 0 1.5rem;
  text-align: center;
}

.portfolio_item {
  font-size: 1rem;
}

.portfolio__img{
  width: 500px;
  border-radius: .5rem;
  justify-self: center;
}

.portfolio__title{
  font-size: var(--h3-font-size);
  margin-bottom: var(--mb-0-5);
}

.portfolio__description{
  margin-bottom: var(--mb-0-75);
}

.portfolio__button:hover .button__icon{
  transform: translateX(.25rem);
}

.scrollup{
  position: fixed;
  right: 1rem;
  bottom: -20%;
  background-color: var(--first-color);
  opacity: .8;
  padding: .4rem .4rem;
  border-radius: .4rem;
  z-index: var(--z-tooltipe);
  transition: .4s;
}

.scrollup:hover{
  background-color: var(--first-color-alt);
}

.scrollup__icon{
  font-size: 1.2rem;
  color: #FFF;
}

.show__scrollUp{
  bottom: 5rem;
}


.headB{
  box-shadow: 0 -1px 4px rgba(0,0,0,.15);
}

.swiper-button-next, .swiper-button-prev {
  top: 38% !important;
}


.swiper-button-next:after, .swiper-button-prev:after {
  font-size: 1.5rem !important;
  text-transform: none!important;
  font-weight: 900 !important;
  color: var(--first-color) !important;
  letter-spacing: 0;
  text-transform: none;
  line-height: 1;
}

/* .swiper-button-next{
  right: 0rem !important;
}
.swiper-button-prev{
  left: 0rem !important;
} */

.swiper-container-horizontal>.swiper-pagination-bullets {
  left: 0;
  width: 100%;
  z-index: 1000;
}

.swiper-pagination-bullet-active{
  background-color: var(--first-color) !important;
}

.swiper-container-pointer-events {
  touch-action: pan-y;
  padding-bottom: 4rem !important;
}



.project{
  text-align: center;
}

.project__bg{
  background-color: var(--first-color-second);
  padding-top: 3rem;
}
.project__title{
  font-size: var(--h2-font-size);
  margin-bottom: var(--mb-0-75);
}

.project__description{
  margin-bottom: var(--mb-1-5);
}

.project__title,
.project__description{
  color: #FFF;
}
.project__img{
  width: 235px;
  justify-self: center;
}
/* TESTIMONIAL */

.testimonial__data,
.testimonial__header{
  display: flex;
}
.testimonial__data{
  justify-content: space-between;
  margin-bottom: var(--mb-1);
}

.testimonial__img{
  width: 60px;
  height: 60px;
  border-radius: 50%;
  margin-right: var(--mb-0-75);
}

.testimonial__name{
  font-size: var(--h3-font-size);
  font-weight: var(--font-medium);
}
.testimonial__client{
  font-size: var(--small-font-size);
  color: var(--text-color-light);
}

.testimonial__description{
  font-size: 1rem;
  margin-bottom: var(--mb-2-5);
}

.testimonial__icon-star{
  color: var(--first-color);
}

.swiper-slide{
  padding: 0 1rem;
}

/*CONTACT*/
.form-group {
  width: 100%;
}

.input-group {
  width: 100%;
  margin-bottom: 1rem;
}

.form-field {
  width: 100%;
  /* height: 3rem; */
  padding: 15px 10px;
  border: 2px solid rgb(197, 197, 197);
  border-radius: 5px;
  outline: none;
}


.input__label {
  font-size: 1rem;
}

.__footer {
  display: none;
}

@media screen and (min-width: 568px) {
  .home__content{
    grid-template-columns: max-content 1fr 1fr;
  }
  .home__data{
    grid-column: initial;
  }

  .home__img{
    order: 1;
    justify-self: center;
  }

  .about__container,
  .skills__container,
  .portfolio__container{
    grid-template-columns: repeat(2, 1fr);
  }

  .qualification__section{
    display: grid;
    grid-template-columns: .6fr;
    justify-content: center;
  }
}




@media screen and (min-width: 768px) {
  .button{
    font-size: .9rem;
  }
  .home{
    align-items: center;
    height: 100vh;
  }
  .home__description{
    font-size: 1rem;
  }
  ._container{
    margin-left: auto;
    margin-right: auto;
    padding-left: 8rem !important;
    padding-right: 8rem !important;
    padding: 0 2rem;
    height: 85vh;
  }

  ._grid_ {
    display: flex;
    flex-wrap: nowrap;
    gap: 1.5rem;
    align-items: center;
    align-content: center;
    margin-top: 10rem;
  }

  .portfolio_content {
    margin-top: 10rem;
  }

  .button--flex {
    display: inline-flex;
    width: auto !important;
    margin-right: 1rem;
    align-items: center;
  }
  body{
    margin: 0;
  }
  .section{
    padding: 6rem 0 4rem !important;
  }

  .header,
  .main{
    top: 0;
    bottom: initial;
  }

  ._nav{
    height: 4.5rem;
    column-gap: 1rem;
  }

  .nav__close,
  .nav__icon,
  .nav__toggle{
    display: none; 
  }

  .nav__logo{
    font-size: .9rem;
  }

  .nav__list{
    display: flex;
    column-gap: 2rem;
    margin-bottom: 0 !important;
  }

  .qualification__title{
    font-size: 1rem;
    font-weight: var(--font-medium);
  }


  .nav__menu{
    margin-left: auto;
  }

  .home__blob{
    width: 500px;
  }
  .home__subtitle,
  .home__description{
    margin-bottom: 2rem !important;
  }
  .about__img {
    width: 80%;
    border-radius: .5rem;
    justify-self: center;
    align-self: center;
  }
  .section__subtitle {
    display: block;
    font-size: 1rem;
    margin-bottom: 0rem !important;
  }
  .skills__name{
    font-size: .8rem;
  }
  .portfolio__content{
    text-align: left;
    padding: 0 4rem;
    display: flex;
  }
  .portfolio__title{
    margin-bottom: 1rem;
  }
  .portfolio__description{
    font-size: 1rem;
    margin-bottom: var(--mb-2);
  }
  .portfolio__button{
    font-size: 1rem;
  }

  .__footer {
    display: block;
    height: 15rem;
    background-color: var(--first-color);
  }
}

